; ModuleID = '/home/carl/AnghaBench/linux/samples/bpf/extr_sockex3_kern.c_main_prog.c'
source_filename = "/home/carl/AnghaBench/linux/samples/bpf/extr_sockex3_kern.c_main_prog.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.__sk_buff = type { i32* }

@ETH_HLEN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main_prog(%struct.__sk_buff* %0) #0 {
  %2 = alloca %struct.__sk_buff*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store %struct.__sk_buff* %0, %struct.__sk_buff** %2, align 8
  %5 = load i32, i32* @ETH_HLEN, align 4
  store i32 %5, i32* %3, align 4
  %6 = load %struct.__sk_buff*, %struct.__sk_buff** %2, align 8
  %7 = call i32 @load_half(%struct.__sk_buff* %6, i32 12)
  store i32 %7, i32* %4, align 4
  %8 = load i32, i32* %3, align 4
  %9 = load %struct.__sk_buff*, %struct.__sk_buff** %2, align 8
  %10 = getelementptr inbounds %struct.__sk_buff, %struct.__sk_buff* %9, i32 0, i32 0
  %11 = load i32*, i32** %10, align 8
  %12 = getelementptr inbounds i32, i32* %11, i64 0
  store i32 %8, i32* %12, align 4
  %13 = load %struct.__sk_buff*, %struct.__sk_buff** %2, align 8
  %14 = load i32, i32* %4, align 4
  %15 = call i32 @parse_eth_proto(%struct.__sk_buff* %13, i32 %14)
  ret i32 0
}

declare dso_local i32 @load_half(%struct.__sk_buff*, i32) #1

declare dso_local i32 @parse_eth_proto(%struct.__sk_buff*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
